# HoudiniEngineForEcho

./: .gitignore  CMakeLists.txt  HoudiniEngine.plugin  README.md
res/hda/: Biome_CA.hda  biome_c1.hda
res/hip/: Biome_CA.hip  biome_c1.hip  collision_test.hip  python_create_node.hip  road_gltf.hip
res/hip/backup/: Biome_CA_bak1.hip  Biome_CA_bak10.hip  Biome_CA_bak11.hip  Biome_CA_bak12.hip  Biome_CA_bak13.hip  Biome_CA_bak14.hip  Biome_CA_bak15.hip  Biome_CA_bak16.hip  Biome_CA_bak2.hip  Biome_CA_bak3.hip  Biome_CA_bak4.hip  Biome_CA_bak5.hip  Biome_CA_bak6.hip  Biome_CA_bak7.hip  Biome_CA_bak8.hip
res/hip/python_create_node/: config.json  heightfiled_split.py  python_create_node.hip  test.hip
src/: CMakeLists.txt  DllMain.cpp  DllMain.h  HoudiniDigitalAsset.cpp  HoudiniDigitalAsset.h  HoudiniModule.cpp  HoudiniModule.h  ModuleConfig.cpp
src/Test/: GeoisoSurface.cpp  GeoisoSurface.h  HAPISession.cpp  HAPISession.h  HDALoader.cpp  HDALoader.h  IdToString.cpp  IdToString.h
